    - Add okteta_big_endian.diff to disable part of okteta funcionality
      (allegedly broken on big endian architectures).
    - Change debian/rules and some debian/*.install to install conditionally
      some files depending on the architecture endian-ness. These files are
      related to the allegedly broken functionality mentioned above.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 06 Dec 2011 05:28:26 +0100

kdesdk (4:4.7.2-1) experimental; urgency=low

  * New upstream release:
    - stops using the deprecated Switch.pm perl module. (Closes: #629339)

  [ Daniele E. Domenichelli ]
  * Update build dependencies:
    * Bump kde-sc-dev-latest to 4:4.7.2.
    * Bump kdepimlibs5-dev to >= 4:4.7.
    * Bump libkonq5-dev to >= 4:4.7.
  * Update append_kde.diff.
  * Update symbols files.
  * Remove kate from built packages.
  * Update installed files.
  * Fix some problems found by lintian.
  * Add lintian-overrides for missing symbols files.

  [ José Manuel Santamaría Lema ]
  * Bump liboktetakastencontrollers ABI version due to a BIC issue.

  [ Pino Toscano ]
  * Manage some packages renamings:
    - kdesdk-dbg depends on kde-runtime-dbg instead of kdebase-runtime-dbg.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:43:38 -0300

kdesdk (4:4.6.5-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Update symbol files.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.5.
  * Update symbols files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Jul 2011 21:54:00 +0300

kdesdk (4:4.6.3-1) unstable; urgency=low

  * New upstream release. 

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.3.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 26 May 2011 02:41:39 +0300

kdesdk (4:4.6.2-2) experimental; urgency=low
