@@ -1,4 +1,8 @@
-Rename svn-clean to svn-clean-kde to avoid conflicts with subversion-tools
+Author: Fathi Boudra<fabo@debian.org>
+Description: Append "-kde" to svn-clean like KDE3.
+ svn-clean script is provided by subversion-tools.
+Bug-Debian: http://bugs.debian.org/461095
+
 --- a/scripts/CMakeLists.txt
 +++ b/scripts/CMakeLists.txt
 @@ -42,7 +42,6 @@
