@@ -11,6 +11,9 @@ kdesdk (4:4.7.4-0r2) UNRELEASED; urgency=low
       some files depending on the architecture endian-ness. These files are
       related to the allegedly broken functionality mentioned above.
 
+  [ Pino Toscano ]
+  * Add DEP3 headers to patch append_kde.diff.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 06 Dec 2011 05:28:26 +0100
 
 kdesdk (4:4.7.2-1) experimental; urgency=low
